@@ -1,5 +1,9 @@
 2011-06-23  Marek Polacek  <mpolacek@redhat.com>
 
+        * gdb.mi/mi2-console.exp: Replace gdb_test_multiple with mi_gdb_test.
+
+2011-06-23  Marek Polacek  <mpolacek@redhat.com>
+
         * gdb.mi/mi2-basics.exp: Fix races.  Honour the
         `test_exec_and_symbol_mi_operatons' return value.
         (test_mi_interpreter_selection): Use mi_gdb_test instead of
